--- a/PAP/app/src/main/res/values/strings.xml
+++ b/PAP/app/src/main/res/values/strings.xml
@@ -1,9 +1,9 @@
 <resources>
-    <string name="coding_phrase">JLM2017LinsoumiSe</string>
+    <string name="coding_phrase">BrainStormPaP</string>
 
-    <string name="app_name">Porte-A-Porte by FI</string>
+    <string name="app_name">Porte-A-Porte by Brainstorm</string>
     <string name="title_activity_login">Connexion au service</string>
-    <string name="basePWD">yeswecanchon</string>
+    <string name="basePWD">toctoc</string>
 
     <!-- Strings related to login -->
     <string name="prompt_email">Email</string>
@@ -28,14 +28,14 @@
     <string name="ok">Confirmer</string>
     <string name="cancel">Annuler</string>
 
-    <string name="title_activity_splash_screen">P-a-P JLM2017</string>
+    <string name="title_activity_splash_screen">P-a-P Brainstorm</string>
     <string name="dummy_button">Dummy Button</string>
     <string name="dummy_content">DUMMY\nCONTENT</string>
-    <string name="splash_screen_title">Le Porte-à-Porte Insoumis</string>
+    <string name="splash_screen_title">Le Porte-à-Porte</string>
     <string name="app_version">Version 1.0 \n Toc toc Mc Fly !</string>
 
     <!-- Strings in the Check Activity -->
-    <string name="dialog_first_connection">Bienvenue à toi cher Insoumis(e), commence par choisir un pseudo et éventuellement changer ton mot de passe ^^</string>
+    <string name="dialog_first_connection">Bienvenue à toi cher user, commence par choisir un pseudo et éventuellement changer ton mot de passe ^^</string>
     <string name="nom_de_rue">Nom de rue</string>
     <string name="ville">Ville</string>
     <string name="bis">Bis</string>
@@ -60,6 +60,12 @@
     <string name="annuler">Annuler</string>
     <string name="title_activity_test_scroll">TestScrollActivity</string>
     <string name="section_format">Hello World from section: %1$d</string>
+    <string name="title_activity_maps">Map</string>
+    <string name="title_activity_main2">Main2Activity</string>
+    <string name="maj_proches">PROCHES</string>
+    <string name="maps_dialog_title">Portes tocquées :</string>
+    <string name="selection_title">Sélectionnez la bonne adresse :</string>
+    <string name="title_activity_maps2">Map</string>
 
 
 </resources>
